[package]
name = "aiml_rs"
version = "0.1.0"
authors = ["hojjat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libaiml"
path = "src/libaiml/lib.rs"

[[bin]]
name = "program_rs"
path = "src/main.rs"


[dependencies]
glob = "0.3.0"
log = "0.4"
env_logger = "0.8.2"
minidom = "0.12.0"
indextree = "4"



