[package]
name = "aiml_rs"
version = "0.1.0"
authors = ["hojjat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "program_rs"
path = "src/main.rs"


[dependencies]
log = "0.4"
env_logger = "0.8.2"
libaiml = { path = "libaiml" }



